# harmonic-drive-selector

./: .gitignore  README.md  main.py  pyproject.toml  requirements-win.txt  requirements.txt
data/: reducers_tables.py
gui/: harmonic_selector_app.py
gui/dialogs/: about_dialog.py  bearing_factors_dialog.py  cable_dialog.py  data_dialog.py  drive_application_dialog.py  first_selection_dialog.py  force_info_dialog.py  how_it_works_dialog.py  input_lifetime_dialog.py  non_numbers_dialog.py  result_dialog.py  selection_input_dialog.py  torque_info_dialog.py  type_inform_dialog.py
gui/resources/: pic.qrc  pic_rc.py
gui/ui/: about.ui  about_dialog.ui  bearing_factor_dialog.ui  bearing_factors_dialog.ui  data_dialog.ui  drive_application_dialog.ui  first_selection_dialog.ui  force_info_dialog.ui  how_it_works_dialog.ui  input_lifetime_dialog.ui  mainwindow.ui  non_numbers_dialog.ui  result_dialog.ui  selection_input_dialog.ui  torque_info_dialog.ui  type_inform_dialog.ui
gui/utils/: generate_py_from_ui.py
src/: harmonic_dasigner.py  harmonic_designer.py
utils/harmonic_drive_selector/: main.py  pyproject.toml
utils/harmonic_drive_selector/gui/: cable_dialog.py  data_dialog.ui  first_selection_dialog.py  first_selection_dialog.ui  mainwindow.py  mainwindow.ui  selection_input_dialog.py  type_inform_dialog.py
utils/harmonic_drive_selector/gui/dialogs/: cable_dialog.py  data_dialog.py  first_selection_dialog.py  input_lifetime_dialog.py  result_dialog.py  resutl_dialog.py  selection_input_dialog.py  (+1 more)
utils/harmonic_drive_selector/src/: harmonic_dasigner.py
(+14 files in other folders)
